# minecraft-skin-preprocessing

./: .gitignore  MinecraftSkinTools.py  README.md  preprocess.py  pyproject.toml
.github/workflows/: publish.yml  publishtest.yml  test.yml
src/mcskinprep/: __init__.py  cli.py  constants.py  detector.py  file_precessor.py  file_processor.py  skin_type.py  tools.py
tests/: run_test.py
