[project]
name = "mcskinprep"
version = "0.1.0"
description = "Minecraft Skin Preprocessing Tools"
authors = [
    { name = "Faxuan Cai", email = "magicianaio@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
]

[project.scripts]
mcskinprep = "mcskinprep.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
